different approach, still testing

--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "tesseract_directory": "C:\\Program Files\\Tesseract-OCR",
     "refresh_time": "0.3",
     "refresh_time_death": "15",
-    "debug_mode": "enabled",
+    "debug_mode": "true",
     "crop_file":"crop.json",
     "mask_file":"mask.json",
     "ocr_string": "YOUDIED",
